--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 <li><a href="tv.html">电视剧</a></li>
                 <li><a href="contact.html">联系我们</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" id="login">
                 <li><a href="login.html">登录</a></li>
             </ul>
         </div>
