完成分页导航

--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
                 <span class="icon-bar"></span>
             </button>
             <img src="img/meow.jpg" class="navbar-brand img-circle">
-            <a class="navbar-brand" href="#">秋秋影院</a>
+            <a class="navbar-brand" href="index.html">秋秋影院</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-left">
-                <li class="active"><a href="index.html">主页</a></li>
-                <li><a href="movie.html">电影</a></li>
-                <li><a href="tv.html">电视剧</a></li>
+                <li class="active"><a href="index.html">首页</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="index.html">影视栏目
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="movie.html">电影</a></li>
+                        <li><a href="tv.html">电视剧</a></li>
+                    </ul>
+                </li>
                 <li><a href="contact.html">联系我们</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" id="login">
