--- a/index.html
+++ b/index.html
@@ -7,9 +7,47 @@
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
-        .fakeimg {
-            height: 200px;
-            background: #aaa;
+        #adv {
+            position: relative;
+            margin: 10px;
+            border: solid 5px #c5a572;
+            box-shadow: 5px 5px 5px #6F605A;
+        }
+
+        #adv dl, #adv dd {
+            list-style: none;
+        }
+
+        #adv dt {
+            position: absolute;
+            bottom: 5px;
+            right: 5px;
+        }
+
+        #adv dd {
+            overflow: hidden;
+            /*width: 600px;*/
+            /*height: 200px;*/
+        }
+
+        #adv dl dt a {
+            display: block;
+            float: left;
+            width: 17px;
+            height: 17px;
+            margin: 2px;
+            border: #963 solid 1px;
+            border-radius: 15px;
+            background-color: #6F605A;
+            color: #FFF;
+            text-decoration: none;
+            text-align: center;
+            padding: 0;
+            font-size: 12px;
+        }
+
+        #adv dl dt a:hover {
+            background-color: #C93;
         }
     </style>
 </head>
@@ -71,6 +109,19 @@
                                                  id="favor3"
                                                  draggable="true" ondragstart="drag()"
                                                  ondragover="allowDrop()" ondrop="drop()"></a>
+        </div>
+    </div>
+    <div class="row">
+        <div id="adv">
+            <dl>
+                <dt>
+                    <a href="#" id="a1">1</a> <a href="#" id="a2">2</a>
+                    <a href="#" id="a3">3</a> <a href="#" id="a4">4</a>
+                </dt>
+                <dd>
+                    <a href="#"><img src="img/ad1.jpg" id="badimg" class="img-thumbnail" alt="广告"></a>
+                </dd>
+            </dl>
         </div>
     </div>
     <div class="row">
@@ -175,6 +226,28 @@
     }
 </script>
 <script>
+    window.onload = function () {
+        if (document.getElementById("a1") != null) {
+            document.getElementById("a1").onmouseover = function () {
+                document.getElementById("badimg").src = "img/ad1.jpg";
+            }
+        }
+        if (document.getElementById("a2") != null) {
+            document.getElementById("a2").onmouseover = function () {
+                document.getElementById("badimg").src = "img/ad2.jpg";
+            }
+        }
+        if (document.getElementById("a3") != null) {
+            document.getElementById("a3").onmouseover = function () {
+                document.getElementById("badimg").src = "img/ad3.jpg";
+            }
+        }
+        if (document.getElementById("a4") != null) {
+            document.getElementById("a4").onmouseover = function () {
+                document.getElementById("badimg").src = "img/ad4.jpg";
+            }
+        }
+    }
     document.getElementById("change").onclick = function () {
         a = parseInt(Math.random() * 24) + 1;
         b = parseInt(Math.random() * 24) + 1;
